[gd_scene load_steps=12 format=3 uid="uid://3nqldbhiakra"]

[ext_resource type="Script" path="res://MilestoneGUI/milestone_gui.gd" id="1_0k1iu"]
[ext_resource type="FontFile" uid="uid://ba0xet4yn3b6y" path="res://assets/fonts/m5x7.ttf" id="1_th33n"]
[ext_resource type="AudioStream" uid="uid://b1f4w2k2fxn2n" path="res://assets/sounds/click.wav" id="3_w86nj"]
[ext_resource type="AudioStream" uid="uid://bk344cr68tdt4" path="res://assets/sounds/hurt.wav" id="3_xv7v5"]

[sub_resource type="Gradient" id="Gradient_rrhl7"]
interpolation_mode = 1
colors = PackedColorArray(0.155754, 0.249088, 0, 1, 0.136851, 0.25324, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_hrmci"]
gradient = SubResource("Gradient_rrhl7")

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_615ah"]
size = Vector2(448, 64)

[sub_resource type="Animation" id="Animation_gog07"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UnlockButton:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_rvm8y"]
resource_name = "not_enough_resources"
length = 0.7
step = 0.005
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_xv7v5")
}],
"times": PackedFloat32Array(0.025)
}
tracks/0/use_blend = true
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UnlockButton:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.174533, -0.174533, 0.174533, 0.0]
}

[sub_resource type="Animation" id="Animation_kywlf"]
length = 0.01
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_w86nj")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_snm7s"]
_data = {
"RESET": SubResource("Animation_gog07"),
"not_enough_resources": SubResource("Animation_rvm8y"),
"on_button_click": SubResource("Animation_kywlf")
}

[node name="MilestoneGUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0k1iu")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_hrmci")

[node name="MilestoneLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 64.0
offset_top = -180.0
offset_right = 384.0
offset_bottom = -129.0
grow_vertical = 2
pivot_offset = Vector2(160, 24)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_th33n")
theme_override_font_sizes/font_size = 64
text = "Milestone name"
horizontal_alignment = 1

[node name="DescriptionAndCosts" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 64.0
offset_top = -100.0
offset_right = -128.0
offset_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(504, 144)
theme_override_fonts/normal_font = ExtResource("1_th33n")
theme_override_font_sizes/normal_font_size = 32
text = "desciption goes here. desciption goes here. desciption goes here. desciption goes here. desciption goes here. desciption goes here. desciption goes here. desciption goes here.


Rewards: cool new stuff or mechanic or something

Costs: 69x random stuff, 1337x random stuff"

[node name="UnlockButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -224.0
offset_top = -104.0
offset_right = 224.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(224, 32)
texture_normal = SubResource("PlaceholderTexture2D_615ah")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_snm7s")
}

[connection signal="button_down" from="UnlockButton" to="." method="_on_unlock_button_button_down"]
